--- a/ImageScaler/ImageScaler.csproj
+++ b/ImageScaler/ImageScaler.csproj
@@ -4,7 +4,20 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>ImageScaler</Title>
+    <Authors>Anuj Karki</Authors>
+    <Description>Scalable package aims to provide solution for Image optimization, storing and retrival.</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageTags>image;image optimization; image storing; save image; image retrival;</PackageTags>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="8.0.4" />
