--- a/ImageScaler/ImageScaler.csproj
+++ b/ImageScaler/ImageScaler.csproj
@@ -10,6 +10,7 @@
     <Description>Scalable package aims to provide solution for Image optimization, storing and retrival.</Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageTags>image;image optimization; image storing; save image; image retrival;</PackageTags>
+    <Version>1.0.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
